# school-project

./: .gitignore  CMakeLists.txt  README.md  Sudoku Solver.sln  Sudoku Solver.vcxproj  Sudoku Solver.vcxproj.filters
lib/: CMakeLists.txt  board.cpp  board.h  constants.h  solver.cpp  solver.h
src/: CMakeLists.txt  board.cpp  board.h  constants.h  errors.h  main.cpp  solver.cpp  solver.h
test/: CMakeLists.txt  test_board.cpp  test_solver.cpp
